Refactor company image upload and modification logic; enhance validation and error handling

--- a/app/static/modify_company.css
+++ b/app/static/modify_company.css
@@ -115,3 +115,9 @@
     }
     }
 
+    .btn-lightblue {
+        background-color: #4da6ff !important; /* blu più chiaro */
+        border-color: #4da6ff !important;
+        color: #ffffff !important;
+    }
+
