Correzione information company ccss e aggiunta di qualche modal

--- a/app/static/information_company.css
+++ b/app/static/information_company.css
@@ -10,7 +10,10 @@
     --border: #E5E7EB;
     --ring: #10B981;
 }
-
+.navbar img {
+    max-height: 40px; /* Imposta un'altezza massima */
+    width: auto; /* Mantiene le proporzioni corrette */
+}
 
 
 body {
