--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -131,6 +131,7 @@
 
         form.addEventListener('submit', function(event) {
             event.preventDefault();
+            sessionStorage.removeItem('mfaStartTime');
             
             if (!form.checkValidity()) {
                 event.stopPropagation();
