Alcune modiffiche su footer che non reindirizzavano ai link corretti

--- a/app/templates/notifications.html
+++ b/app/templates/notifications.html
@@ -501,9 +501,9 @@ function removeNotification(notificationCard) {
     <div class="col-md-4">
     <h5>Quick Links</h5>
     <ul class="list-unstyled">
-    <li><a href="#about" class="text-light">About Us</a></li>
-    <li><a href="#products" class="text-light">Greener Companies</a></li>
-    <li><a href="#contact" class="text-light">Contact</a></li>
+    <li><a href="/#about" class="text-light">About Us</a></li>
+    <li><a href="/#products" class="text-light">Greener Companies</a></li>
+    <li><a href="/#contact" class="text-light">Contact</a></li>
     </ul>
     </div>
     <div class="col-md-4">
